Resize lines when clearing to end of line.

clearImage() just clears until _columns.  To prevent characters from
beyond _columns from reappearing, e.g. due to DCH (Delete CHaracters)
requests, make clearImage() resize lines when clearing to the end of
line.

BUG: 432669
(cherry picked from commit ed7fe4a2cbb8f4fc178ae83431f0190c92d39ba2)